# audacious-cdcover

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.skin  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  libtool
src/: Makefile  Makefile.am  Makefile.in  configmgm.c  configmgm.h  debug.h  findcover.c  findcover.h  globals.h  main.c  mainwindow.c  mainwindow.h
src/.deps/: configmgm.P  findcover.P  main.P  mainwindow.P
src/interface/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  callbacks_export.h  cdcover.glade  interface.c  interface.h
src/interface/.deps/: callbacks.P  interface.P  support.P
src/skin/: Makefile  Makefile.am  Makefile.in  skin1.h  skin1.xcf  skin1_base.xpm  skin1_nocover.xpm
src/skin/old/: skin1.xcf  skin1.xpm  skin2.h  skin2.xcf  skin2.xpm  skin3.xcf  skin3.xpm
