dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT(src/main.c)
AC_CANONICAL_TARGET([])
AM_INIT_AUTOMAKE(audacious-cdcover, 0.2)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([strstr])
AC_CHECK_HEADERS([fcntl.h])
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_CHECK_FUNCS([strdup])
AC_FUNC_CLOSEDIR_VOID
AC_HEADER_DIRENT
AC_REPLACE_FNMATCH

AC_PROG_CC
AC_PROG_CPP
AC_HEADER_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_FUNC_STAT
AC_C_CONST

AC_PATH_X

PKG_CHECK_MODULES(GTK, [glib-2.0 >= 2.4.0 gtk+-2.0 >= 2.4.0],,AC_MSG_ERROR([*** GLIB >= 2.4.0 or GTK+ >= 2.4.0 not installed - please install first *** ]))
PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 0.1.0],,AC_MSG_ERROR([*** Audacious >= 0.1.0 not installed - please install first ***]))
PKG_CHECK_MODULES(GDK_PIXBUF, [gdk-pixbuf-2.0 >= 2.6.0],,AC_MSG_ERROR([*** GDK-Pixbuf-2.0 >= 2.6.0 not installed - please install first ***]))

AC_OUTPUT(Makefile src/Makefile src/interface/Makefile src/skin/Makefile)
